[package]
name = "pyreccaster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyreccaster"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "^0.20", features = ["extension-module", "generate-import-lib"] }
pyo3-asyncio = { version = "^0.20", features = ["attributes", "tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
reccaster = { path = "../reccaster" }
