[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "pyreccaster"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
[project.optional-dependencies]
tests = [
    "pytest",
]
dynamic = ["version"]

[tool.maturin]
profile = "release"
python-source = "python"
compatibility = "linux"
features = ["pyo3/extension-module"]
