[package]
name = "reccaster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.36", features = ["full"] }
tokio-util = { version = "^0.7.11", features = ["full"] }
tokio-stream = "^0.1"
bytes = "^1"
futures = "^0.3.30"
tracing = "^0.1"
wire = { path = "../wire" }
