[package]
name = "wire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
bytes = "1"
tokio = { version = "^1", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
